Some work with Adam

--- a/router.ipynb
+++ b/router.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "import subprocess\n",
     "import re\n",
     "from scapy.all import Ether, ARP, srp, sendp, sniff\n",
-    "from scapy.all import *"
+    "from scapy.all import *\n",
+    "import logging"
    ]
   },
   {
@@ -39,9 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using interface: bridge0\n",
+      "Listening on bridge0\n",
+      "###[ Ethernet ]### \n",
+      "  dst       = ff:ff:ff:ff:ff:ff\n",
+      "  src       = 36:d6:fd:84:9a:00\n",
+      "  type      = 0x9000\n",
+      "###[ Raw ]### \n",
+      "     load      = 'Hello, virtual network!'\n",
+      "Sent frame on bridge0\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def send_frame(iface):\n",
     "    # Create a simple Ethernet frame\n",
@@ -52,7 +70,7 @@
     "def receive_frame(iface):\n",
     "    print(f\"Listening on {iface}\")\n",
     "    sniff(iface=iface, prn=lambda x: x.show(), count=1)\n",
-    "    \n",
+    "\n",
     "def delayed_send(iface):\n",
     "    time.sleep(5)\n",
     "    send_frame(iface)\n",
@@ -76,9 +94,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using interface: bridge1\n",
+      "Listening on bridge1\n",
+      "###[ Ethernet ]### \n",
+      "  dst       = 01:00:5e:7f:ff:fa\n",
+      "  src       = 3c:06:30:07:40:f6\n",
+      "  type      = IPv4\n",
+      "###[ IP ]### \n",
+      "     version   = 4\n",
+      "     ihl       = 5\n",
+      "     tos       = 0x0\n",
+      "     len       = 204\n",
+      "     id        = 62028\n",
+      "     flags     = \n",
+      "     frag      = 0\n",
+      "     ttl       = 1\n",
+      "     proto     = udp\n",
+      "     chksum    = 0xcbac\n",
+      "     src       = 10.11.1.35\n",
+      "     dst       = 239.255.255.250\n",
+      "     \\options   \\\n",
+      "###[ UDP ]### \n",
+      "        sport     = 59920\n",
+      "        dport     = ssdp\n",
+      "        len       = 184\n",
+      "        chksum    = 0x2a82\n",
+      "###[ Raw ]### \n",
+      "           load      = 'M-SEARCH * HTTP/1.1\\r\\nHOST: 239.255.255.250:1900\\r\\nMAN: \"ssdp:discover\"\\r\\nMX: 1\\r\\nST: urn:dial-multiscreen-org:service:dial:1\\r\\nUSER-AGENT: Google Chrome/125.0.6422.144 Mac OS X\\r\\n\\r\\n'\n",
+      "\n",
+      "Listening on bridge1\n",
+      "###[ Ethernet ]### \n",
+      "  dst       = 01:00:5e:00:00:fb\n",
+      "  src       = 82:a9:97:d3:1e:01\n",
+      "  type      = IPv4\n",
+      "###[ IP ]### \n",
+      "     version   = 4\n",
+      "     ihl       = 5\n",
+      "     tos       = 0x0\n",
+      "     len       = 379\n",
+      "     id        = 39313\n",
+      "     flags     = \n",
+      "     frag      = 0\n",
+      "     ttl       = 255\n",
+      "     proto     = udp\n",
+      "     chksum    = 0x0\n",
+      "     src       = 192.168.200.1\n",
+      "     dst       = 224.0.0.251\n",
+      "     \\options   \\\n",
+      "###[ UDP ]### \n",
+      "        sport     = mdns\n",
+      "        dport     = mdns\n",
+      "        len       = 359\n",
+      "        chksum    = 0x6b1e\n",
+      "###[ DNS ]### \n",
+      "           id        = 0\n",
+      "           qr        = 1\n",
+      "           opcode    = QUERY\n",
+      "           aa        = 1\n",
+      "           tc        = 0\n",
+      "           rd        = 0\n",
+      "           ra        = 0\n",
+      "           z         = 0\n",
+      "           ad        = 0\n",
+      "           cd        = 0\n",
+      "           rcode     = ok\n",
+      "           qdcount   = 0\n",
+      "           ancount   = 2\n",
+      "           nscount   = 0\n",
+      "           arcount   = 5\n",
+      "           qd        = None\n",
+      "           \\an        \\\n",
+      "            |###[ DNS Resource Record ]### \n",
+      "            |  rrname    = '_companion-link._tcp.local.'\n",
+      "            |  type      = PTR\n",
+      "            |  rclass    = IN\n",
+      "            |  ttl       = 4500\n",
+      "            |  rdlen     = None\n",
+      "            |  rdata     = 'Jason’s MacBook Pro._companion-link._tcp.local.'\n",
+      "            |###[ DNS Resource Record ]### \n",
+      "            |  rrname    = 'Jason’s MacBook Pro._device-info._tcp.local.'\n",
+      "            |  type      = TXT\n",
+      "            |  rclass    = IN\n",
+      "            |  ttl       = 4500\n",
+      "            |  rdlen     = 34\n",
+      "            |  rdata     = [b'model=Mac15,6', b'osxvers=23', b'icolor=9']\n",
+      "           ns        = None\n",
+      "           \\ar        \\\n",
+      "            |###[ DNS Resource Record ]### \n",
+      "            |  rrname    = 'Jason’s MacBook Pro._companion-link._tcp.local.'\n",
+      "            |  type      = TXT\n",
+      "            |  rclass    = 32769\n",
+      "            |  ttl       = 4500\n",
+      "            |  rdlen     = 91\n",
+      "            |  rdata     = [b'rpBA=15:5F:0B:47:84:CA', b'rpAD=195ae8c10723', b'rpFl=0x20000', b'rpHN=6880e4895457', b'rpMac=0', b'rpVr=550.7']\n",
+      "            |###[ DNS SRV Resource Record ]### \n",
+      "            |  rrname    = 'Jason’s MacBook Pro._companion-link._tcp.local.'\n",
+      "            |  type      = SRV\n",
+      "            |  rclass    = 32769\n",
+      "            |  ttl       = 4500\n",
+      "            |  rdlen     = None\n",
+      "            |  priority  = 0\n",
+      "            |  weight    = 0\n",
+      "            |  port      = 51476\n",
+      "            |  target    = 'Jasons-MacBook-Pro.local.'\n",
+      "            |###[ DNS Resource Record ]### \n",
+      "            |     rrname    = 'Jasons-MacBook-Pro.local.'\n",
+      "            |     type      = A\n",
+      "            |     rclass    = 32769\n",
+      "            |     ttl       = 4500\n",
+      "            |     rdlen     = 4\n",
+      "            |     rdata     = 192.168.200.1\n",
+      "            |###[ DNS NSEC Resource Record ]### \n",
+      "            |     rrname    = 'Jason’s MacBook Pro._companion-link._tcp.local.'\n",
+      "            |     type      = NSEC\n",
+      "            |     rclass    = 32769\n",
+      "            |     ttl       = 4500\n",
+      "            |     rdlen     = None\n",
+      "            |     nextname  = 'Jason’s MacBook Pro._companion-link._tcp.local.'\n",
+      "            |     typebitmaps= ['TXT', 'SRV']\n",
+      "            |###[ DNS NSEC Resource Record ]### \n",
+      "            |        rrname    = 'Jasons-MacBook-Pro.local.'\n",
+      "            |        type      = NSEC\n",
+      "            |        rclass    = 32769\n",
+      "            |        ttl       = 4500\n",
+      "            |        rdlen     = None\n",
+      "            |        nextname  = 'Jasons-MacBook-Pro.local.'\n",
+      "            |        typebitmaps= ['A']\n",
+      "\n",
+      "Listening on bridge1\n",
+      "###[ Ethernet ]### \n",
+      "  dst       = 33:33:00:00:00:fb\n",
+      "  src       = 3e:a8:61:21:5d:22\n",
+      "  type      = IPv6\n",
+      "###[ IPv6 ]### \n",
+      "     version   = 6\n",
+      "     tc        = 0\n",
+      "     fl        = 851968\n",
+      "     plen      = 68\n",
+      "     nh        = UDP\n",
+      "     hlim      = 255\n",
+      "     src       = fe80::4d9:5956:5da9:c759\n",
+      "     dst       = ff02::fb\n",
+      "###[ UDP ]### \n",
+      "        sport     = mdns\n",
+      "        dport     = mdns\n",
+      "        len       = 68\n",
+      "        chksum    = 0xa848\n",
+      "###[ DNS ]### \n",
+      "           id        = 0\n",
+      "           qr        = 0\n",
+      "           opcode    = QUERY\n",
+      "           aa        = 0\n",
+      "           tc        = 0\n",
+      "           rd        = 0\n",
+      "           ra        = 0\n",
+      "           z         = 0\n",
+      "           ad        = 0\n",
+      "           cd        = 0\n",
+      "           rcode     = ok\n",
+      "           qdcount   = 2\n",
+      "           ancount   = 0\n",
+      "           nscount   = 0\n",
+      "           arcount   = 0\n",
+      "           \\qd        \\\n",
+      "            |###[ DNS Question Record ]### \n",
+      "            |  qname     = '_rdlink._tcp.local.'\n",
+      "            |  qtype     = PTR\n",
+      "            |  qclass    = IN\n",
+      "            |###[ DNS Question Record ]### \n",
+      "            |  qname     = '_sleep-proxy._udp.local.'\n",
+      "            |  qtype     = PTR\n",
+      "            |  qclass    = IN\n",
+      "           an        = None\n",
+      "           ns        = None\n",
+      "           ar        = None\n",
+      "\n",
+      "Listening on bridge1\n",
+      "###[ Ethernet ]### \n",
+      "  dst       = 01:00:5e:00:00:fb\n",
+      "  src       = 9c:3e:53:84:a0:28\n",
+      "  type      = IPv4\n",
+      "###[ IP ]### \n",
+      "     version   = 4\n",
+      "     ihl       = 5\n",
+      "     tos       = 0x0\n",
+      "     len       = 171\n",
+      "     id        = 3053\n",
+      "     flags     = \n",
+      "     frag      = 0\n",
+      "     ttl       = 255\n",
+      "     proto     = udp\n",
+      "     chksum    = 0xc1f2\n",
+      "     src       = 10.11.2.92\n",
+      "     dst       = 224.0.0.251\n",
+      "     \\options   \\\n",
+      "###[ UDP ]### \n",
+      "        sport     = mdns\n",
+      "        dport     = mdns\n",
+      "        len       = 151\n",
+      "        chksum    = 0x656b\n",
+      "###[ DNS ]### \n",
+      "           id        = 0\n",
+      "           qr        = 1\n",
+      "           opcode    = QUERY\n",
+      "           aa        = 1\n",
+      "           tc        = 0\n",
+      "           rd        = 0\n",
+      "           ra        = 0\n",
+      "           z         = 0\n",
+      "           ad        = 0\n",
+      "           cd        = 0\n",
+      "           rcode     = ok\n",
+      "           qdcount   = 0\n",
+      "           ancount   = 2\n",
+      "           nscount   = 0\n",
+      "           arcount   = 0\n",
+      "           qd        = None\n",
+      "           \\an        \\\n",
+      "            |###[ DNS Resource Record ]### \n",
+      "            |  rrname    = '_companion-link._tcp.local.'\n",
+      "            |  type      = PTR\n",
+      "            |  rclass    = IN\n",
+      "            |  ttl       = 4500\n",
+      "            |  rdlen     = None\n",
+      "            |  rdata     = 'MacBook Pro (3)._companion-link._tcp.local.'\n",
+      "            |###[ DNS Resource Record ]### \n",
+      "            |  rrname    = 'MacBook Pro (3)._device-info._tcp.local.'\n",
+      "            |  type      = TXT\n",
+      "            |  rclass    = IN\n",
+      "            |  ttl       = 4500\n",
+      "            |  rdlen     = 34\n",
+      "            |  rdata     = [b'model=Mac14,7', b'osxvers=21', b'icolor=2']\n",
+      "           ns        = None\n",
+      "           ar        = None\n",
+      "\n",
+      "Listening on bridge1\n",
+      "###[ Ethernet ]### \n",
+      "  dst       = ff:ff:ff:ff:ff:ff\n",
+      "  src       = 3c:06:30:07:40:f6\n",
+      "  type      = ARP\n",
+      "###[ ARP ]### \n",
+      "     hwtype    = Ethernet (10Mb)\n",
+      "     ptype     = IPv4\n",
+      "     hwlen     = 6\n",
+      "     plen      = 4\n",
+      "     op        = who-has\n",
+      "     hwsrc     = 3c:06:30:07:40:f6\n",
+      "     psrc      = 10.11.1.35\n",
+      "     hwdst     = 00:00:00:00:00:00\n",
+      "     pdst      = 10.11.1.20\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "internet_interface = \"bridge1\"\n",
     "print(f\"Using interface: {internet_interface}\")\n",
@@ -89,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,12 +404,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method_descriptor:\n",
+      "\n",
+      "hex(...)\n",
+      "    Create a string of hexadecimal numbers from a bytes object.\n",
+      "    \n",
+      "      sep\n",
+      "        An optional single character or byte to separate hex bytes.\n",
+      "      bytes_per_sep\n",
+      "        How many bytes between separators.  Positive values count from the\n",
+      "        right, negative values count from the left.\n",
+      "    \n",
+      "    Example:\n",
+      "    >>> value = b'\\xb9\\x01\\xef'\n",
+      "    >>> value.hex()\n",
+      "    'b901ef'\n",
+      "    >>> value.hex(':')\n",
+      "    'b9:01:ef'\n",
+      "    >>> value.hex(':', 2)\n",
+      "    'b9:01ef'\n",
+      "    >>> value.hex(':', -2)\n",
+      "    'b901:ef'\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(bytes.hex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse_ethernet_frame(frame: bytes) -> Tuple[str, str, int, bytes]:\n",
-    "    pass"
+    "    dst_mac = frame[:6].hex(\":\")\n",
+    "    src_mac = frame[6:12].hex(\":\")\n",
+    "    ethertype = struct.unpack(\"!H\", frame[12:14])[0]\n",
+    "    payload = frame[14:]\n",
+    "    return dst_mac, src_mac, ethertype, payload\n",
+    "    #dest_mac, src_mac, frame_type = struct.unpack(\"!6s6sH\", frame[:14])\n",
+    "    #return (dest_mac, src_mac, frame_type, frame[14:])\n",
+    "\n",
+    "#"
    ]
   },
   {
@@ -179,12 +500,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse_ip_header(ip_data: bytes) -> Tuple[int, int, int, int, str, str, bytes]:\n",
-    "    pass"
+    "    iph = struct.unpack(\"!BBHHHBBH4s4s\", ip_data[:20])\n",
+    "    version = iph[0] >> 4\n",
+    "    ihl = (iph[0] & 0xF) << 2\n",
+    "    ttl = iph[5]\n",
+    "    protocol = iph[6]\n",
+    "    src_ip = socket.inet_ntoa(iph[8])\n",
+    "    dst_ip = socket.inet_ntoa(iph[9])\n",
+    "    data = ip_data[ihl:]\n",
+    "    return version, ihl, ttl, protocol, src_ip, dst_ip, data"
    ]
   },
   {
@@ -208,12 +537,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_tcp_udp_header(data: bytes, protocol: str) -> Tuple[int, int, int, int, bytes]:\n",
-    "    pass"
+    "def parse_tcp_udp_header(data: bytes, protocol: int) -> Tuple[Optional[bytes], Optional[bytes]]: # TODO: wrong type???\n",
+    "    match protocol:\n",
+    "        case 6|17: # TCP or UDP\n",
+    "            src_port, dst_port = struct.unpack(\"!HH\", data[:4])\n",
+    "            return src_port, dst_port\n",
+    "        case _:\n",
+    "            return None, None\n"
    ]
   },
   {
@@ -248,12 +582,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function pack in module _struct:\n",
+      "\n",
+      "pack(...)\n",
+      "    pack(format, v1, v2, ...) -> bytes\n",
+      "    \n",
+      "    Return a bytes object containing the values v1, v2, ... packed according\n",
+      "    to the format string.  See help(struct) for more on format strings.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(struct.pack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_ip_header(src_ip: str, dst_ip: str, ttl: int, protocol: int, total_length: int) -> bytes:\n",
-    "    pass"
+    "    version = 4\n",
+    "    ihl = 20\n",
+    "    tos = 0\n",
+    "    identification = random.randint(0, 2**16 - 1)\n",
+    "    protocol = 6\n",
+    "    fragmentation = 0\n",
+    "    src = socket.inet_aton(src_ip)\n",
+    "    dst = socket.inet_aton(dst_ip)\n",
+    "    checksum = 0 # TODO\n",
+    "    version_ihl = (version << 4) | (ihl >> 2)\n",
+    "    ip_header = struct.pack(\"!BBHHHBBH4s4s\", version_ihl, tos, total_length, identification, fragmentation, ttl, protocol, checksum, src, dst)\n",
+    "    return ip_header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65515"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# max length of data w/o header\n",
+    "2**16 - 1 - 20"
    ]
   },
   {
@@ -283,17 +673,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_checksum(data: bytes) -> int:\n",
-    "    pass"
+    "    if len(data) % 2 != 0:\n",
+    "        data += b\"\\x00\"\n",
+    "    checksum = 0\n",
+    "    for i in range(0, len(data), 2):\n",
+    "        checksum += int.from_bytes(data[i:i+2], \"big\")\n",
+    "    return ~checksum & 0xFFFF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,6 +744,11 @@
     "nat_table = {}\n",
     "\n",
     "def handle_nat(protocol: str, src_ip: str, src_port: int, dst_ip: str, dst_port: int) -> Tuple[str, int]:\n",
+    "   uid = (protocol, src_ip, src_port)\n",
+    "   logging.debug(f\"handle_nat({protocol}, {src_ip}, {src_port}, {dst_ip}, {dst_port}) -> {uid}\")\n",
+    "   \n",
+    "\n",
+    "\n",
     "   pass"
    ]
   },
@@ -498,7 +898,7 @@
    "source": [
     "def packet_handler(packet: Packet):\n",
     "    frame = bytes(packet)\n",
-    "    \n",
+    "\n",
     "    pass"
    ]
   },
@@ -534,9 +934,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Root Kernel",
+   "display_name": "base",
    "language": "python",
-   "name": "root_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -548,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
