--- a/router.ipynb
+++ b/router.ipynb
@@ -742,14 +742,22 @@
     "# NAT table to keep track of connections\n",
     "\n",
     "nat_table = {}\n",
+    "rev_nat_table = {}\n",
+    "available_ports = set(range(40152, 65535+1))\n",
     "\n",
     "def handle_nat(protocol: str, src_ip: str, src_port: int, dst_ip: str, dst_port: int) -> Tuple[str, int]:\n",
     "   uid = (protocol, src_ip, src_port)\n",
     "   logging.debug(f\"handle_nat({protocol}, {src_ip}, {src_port}, {dst_ip}, {dst_port}) -> {uid}\")\n",
-    "   \n",
-    "\n",
-    "\n",
-    "   pass"
+    "   if uid in nat_table:\n",
+    "       return nat_table[uid]\n",
+    "   else:\n",
+    "        # Generate a new random port number\n",
+    "        new_port = random.choice(list(available_ports))\n",
+    "        available_ports.remove(new_port)\n",
+    "        public_ip = (src_ip, new_port)\n",
+    "        nat_table[uid] = public_ip\n",
+    "        rev_nat_table[(protocol, public_ip)] = uid\n",
+    "        return public_ip\n"
    ]
   },
   {
