--- a/router.ipynb
+++ b/router.ipynb
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,12 +814,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_ethernet_frame(dst_mac: str, src_mac: str, ethertype: int, payload: bytes) -> bytes:\n",
-    "    pass"
+    "    dst_mac = bytes.fromhex(dst_mac.replace(\":\", \"\"))\n",
+    "    src_mac = bytes.fromhex(src_mac.replace(\":\", \"\"))\n",
+    "    ethertype = struct.pack(\"!H\", ethertype)\n",
+    "    return dst_mac + src_mac + ethertype + payload"
    ]
   },
   {
